; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/dvb-core/extr_dvb_frontend.c_dvb_frontend_is_exiting.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/dvb-core/extr_dvb_frontend.c_dvb_frontend_is_exiting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dvb_frontend_private* }
%struct.dvb_frontend_private = type { i64, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@DVB_FE_NO_EXIT = common dso_local global i64 0, align 8
@jiffies = common dso_local global i32 0, align 4
@dvb_shutdown_timeout = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*)* @dvb_frontend_is_exiting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dvb_frontend_is_exiting(%struct.dvb_frontend* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca %struct.dvb_frontend_private*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  %5 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %6 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %5, i32 0, i32 0
  %7 = load %struct.dvb_frontend_private*, %struct.dvb_frontend_private** %6, align 8
  store %struct.dvb_frontend_private* %7, %struct.dvb_frontend_private** %4, align 8
  %8 = load %struct.dvb_frontend_private*, %struct.dvb_frontend_private** %4, align 8
  %9 = getelementptr inbounds %struct.dvb_frontend_private, %struct.dvb_frontend_private* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @DVB_FE_NO_EXIT, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %36

14:                                               ; preds = %1
  %15 = load %struct.dvb_frontend_private*, %struct.dvb_frontend_private** %4, align 8
  %16 = getelementptr inbounds %struct.dvb_frontend_private, %struct.dvb_frontend_private* %15, i32 0, i32 2
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp eq i32 %19, 1
  br i1 %20, label %21, label %35

21:                                               ; preds = %14
  %22 = load i32, i32* @jiffies, align 4
  %23 = load %struct.dvb_frontend_private*, %struct.dvb_frontend_private** %4, align 8
  %24 = getelementptr inbounds %struct.dvb_frontend_private, %struct.dvb_frontend_private* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = load i32, i32* @dvb_shutdown_timeout, align 4
  %27 = load i32, i32* @HZ, align 4
  %28 = mul nsw i32 %26, %27
  %29 = sext i32 %28 to i64
  %30 = add nsw i64 %25, %29
  %31 = call i64 @time_after(i32 %22, i64 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %21
  store i32 1, i32* %2, align 4
  br label %36

34:                                               ; preds = %21
  br label %35

35:                                               ; preds = %34, %14
  store i32 0, i32* %2, align 4
  br label %36

36:                                               ; preds = %35, %33, %13
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i64 @time_after(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
